manifests/apps/model-manager/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: model-manager
spec:
  gateways:
    - os4ml/os4ml-gateway
    - kubeflow/kubeflow-gateway
  hosts:
    - '*'
  http:
    - name: "model-manager-route"
      match:
        - uri:
            regex: \/apis\/.*\/model-manager.*
      route:
        - destination:
            host: model-manager.os4ml.svc.cluster.local
            port:
              number: 8000
